Release notes
==========================================================

(2012-06-12)

- Implemented t.Relations[] and t.Links[] properties.
- Implemented TghDBTableList class
- Changed all TFPHashObjectList table fields to TghDBTableList class;
- Removed Contnrs unit dependency.
- Removed Variants unit dependency.
- All examples were updated.


(2012-06-05)

- TghDBConnector class was renamed to TghDBConnector.
- co.SetDBLibClass method was renamed to SetBrokerClass.
- TghDBLib class was renamed to TghDBBroker.
- TghDBSQLdbLib was renamed to TghDBSQLdbBroker.
- TghDBZeosLib was renamed to TghDBZeosBroker.
- gh_dbsqldblib unit was renamed to gh_dbsqldbbroker.
- gh_dbzeoslib unit was renamed to gh_dbzeosbroker.
- Table: methods like Close, Open, First, Next, Select, Where, etc returns the table itself.
- t.Connection was renamed to t.Connector
- Implemented t.Commit, t.Rollback and t.Cancel
- t.Apply is deprecated. Use t.Commit instead.
- All examples were updated.


----------------------------------------------------------